Extract code into Cell object

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/game.js"></script>
     <script src="js/tictactoe.js"></script>
+    <script src="js/cell.js"></script>
     <script>
       $(document).ready(function() {
         var game = new Game(500, 500);
